--- a/common/templates/search.html
+++ b/common/templates/search.html
@@ -25,7 +25,7 @@
     <h4 class="bannerLeft"></h4>
     <h4 class="bannerRight"></h4>
     <h1 class="bannerTitle" id="site-name">{{ apptitle }}</h1>
-
+    <hr style="height:3px;background-color:lightgray;">
     <!-- div class="user-tools" -->
     <div class="unitnav">
         {% include "cspace_django_site/loginBtn.html" with loginBtnNext="search/" %}
