--- a/cspace_django_site/static/cspace_django_site/css/base.css
+++ b/cspace_django_site/static/cspace_django_site/css/base.css
@@ -249,15 +249,15 @@ a#logout:hover { background-color: #333; color: #FFF; }
 
 #branding h1 {
     /* text-indent: -9999px; Hides the text in the h1 tag, but still makes text available for screenreaders */
-    text-indent: 360px;
-    height: 50px; /* The height of the tallest image referenced above in background-image */
+    text-indent: 160px;
+    height: 105px; /* The height of the tallest image referenced above in background-image */
+
     
     /* To add your own institution's header image, place the image in: 
         cspace_django_project/cspace_django_site/static/cspace_django_site/images/header-logo.png
         Then comment the following background line, and uncomment the line after that. */
     
-    #background: url(../images/header-logo-cspace.png) no-repeat right top;
-    background: url(../images/header-logo.png) no-repeat left top, url(../images/header-logo-cspace.png) no-repeat right top;
+    background: url(../images/header-logo.png) no-repeat left top;
 }
 
 #login-content p {
