--- a/common/templates/buttons.html
+++ b/common/templates/buttons.html
@@ -29,8 +29,8 @@
         </div>
         <div style="float:left">
             <input type="checkbox" {% if pixonly %}checked {% endif %} name='pixonly' value="pixonly"> Include only items with images.
-            <br/>
-            <input type="checkbox" {% if locsonly %}checked {% endif %} name='locsonly' value="locsonly"> Include only items with latlongs.
+            <!-- br/>
+            <input type="checkbox" {% if locsonly %}checked {% endif %} name='locsonly' value="locsonly"> Include only items with latlongs. -->
         </div>
     </div>
     <!--span id="acceptterms" class="tiny" style="float: right;">
